--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "clear": "gulp clear",
-    "static": "gulp spritePS && && gulp images && gulp fonts && gulp libs && gulp clearTrash",
+    "static": "gulp sprite && gulp images && gulp fonts && gulp libs && gulp clearTrash",
     "html": "gulp htmlBuild",
     "styles": "gulp styles",
     "scripts": "gulp scripts",
@@ -39,7 +39,7 @@
     "gulp-pug-linter": "^1.5.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svg-sprite": "^1.4.1",
     "gulp-uglify-es": "^2.0.0",
     "gulp-w3c-html-validator": "^2.0.0",
     "gulp-webp": "^4.0.1",
