feature/ added new build v.1.0

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build": "gulp build",
     "prod": "gulp clear && yarn static && gulp htmlBuild && gulp styles && gulp scripts",
     "dev": "gulp watch --dev --sync",
-    "component -c":"gulp component --create",
-    "component -r":"gulp component --remove"
+    "cmp":"gulp component"
   },
   "keywords": [],
   "author": "",
