--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,20 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+# Файлы и папки операционной системы
+.DS_Store
+Thumbs.db
+
+# Файлы редактора
+.idea
+*.sublime*
+.vscode
+
+# Вспомогательные файлы
+*.log*
+reports/
+
+# Папка с собранными файлами проекта
+# build/
